# loincloth

./: .gitmodules  .travis.yml  404.html  CMakeLists.txt  Makefile  README.md  a7629950cb7a18c7593baf47d0acfe798f1cddc4-d5fd960c7863fdd47dc4.js  a7629950cb7a18c7593baf47d0acfe798f1cddc4-d5fd960c7863fdd47dc4.js.map  app-7346018a2deb56821b42.js  app-7346018a2deb56821b42.js.map  chunk-map.json  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-docs-query-js-83c53bcc025d90906b89.js  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-docs-query-js-83c53bcc025d90906b89.js.map  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-homepage-query-js-2bff4ce37bd643c4d371.js  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-homepage-query-js-2bff4ce37bd643c4d371.js.map  index.html  manifest.webmanifest  sdkconfig.defaults  sitemap.xml  sw.js  webpack-runtime-c1987a1dd6a23aa19b88.js  webpack-runtime-c1987a1dd6a23aa19b88.js.map  webpack.stats.json
404/: index.html
components/idf-lib/: CMakeLists.txt  Kconfig.projbuild
components/idf-lib/include/: camera.hpp  ota.hpp
components/idf-lib/src/: ota.cpp
docker-scripts/: build.sh  config.sh  flash.sh  moveScripts.sh  testIDF.sh
docs/: gatsby-config.js  package.json
main/: CMakeLists.txt  Kconfig.projbuild  ble_services.cpp  ble_services.hpp  globals.hpp  main.cpp  sensors.hpp  tasks.cpp  tasks.hpp  uri_handles.cpp  uri_handles.hpp
offline-plugin-app-shell-fallback/: index.html
page-data/: app-data.json
usage/: index.html
(+53 files in other folders)
